cabal-version:      3.0
name:               zkfold-uplc
version:            0.1.0.0
synopsis:           zkFold's UPLC converter from Plutus Core to arithmetic circuits
-- description:
homepage:           https://zkfold.io/
license:            MIT
license-file:       LICENSE
author:
    Vladimir Sinyakov, Pavel Sokolov, Vladimir Morozov, Eitan Chatav, Ilya Baryshnikov, Anna Hovanskaya, Evgenii Samodelov, Maxim Churilov

maintainer:         vlasin@zkfold.io
-- copyright:
category:           Blockchain, Cryptography, DSL, Math, Symbolic Computation
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

Flag Pedantic
    Description: Enable pedantic build with -Werror
    Manual: True
    Default: False

library
    exposed-modules:
      ZkFold.Symbolic.UPLC.Converter
      ZkFold.Symbolic.UPLC.Data
      ZkFold.Symbolic.UPLC.Evaluation
      ZkFold.UPLC.BuiltinFunction
      ZkFold.UPLC.BuiltinType
      ZkFold.UPLC.Term
    build-depends:
      adjunctions              ,
      base          ^>=4.18.2.0,
      bytestring               ,
      symbolic-base            ,
      text
    hs-source-dirs:     src
    default-language:   Haskell2010
    default-extensions:
      NoImplicitPrelude
    ghc-options:
      -Wall
      -O2
      -threaded
    if flag(Pedantic)
      ghc-options:
        -Werror
